# AlphaLab-Agent

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
artifacts/: .gitkeep
docs/: AGENT_DESIGN.md  CONFIG_GUIDE.md  DEMO_WALKTHROUGH.md  MAINTENANCE.md  MAINTENANCE_LOG.md  PROJECT_NOTES.md  PROJECT_PLAN.md  RELEASE_CHECKLIST.md  RUNBOOK.md  TROUBLESHOOTING.md
examples/: config_csv_sample.json  config_synthetic_minimal.json  run_v0_research.py  sample_ohlcv.csv  v0_2_config.json  v0_3_goal.txt
scripts/: run_tests.py
src/alphalab_agent/: __init__.py  _version.py  cli.py  config.py  pipeline.py
src/alphalab_agent/analysis/: __init__.py  factor_analysis.py  ml_model.py  robustness.py  weighting.py
src/alphalab_agent/app/: __init__.py  (+1 more)
tests/: test_agent_documentation.py  test_analysis.py  test_artifact_hygiene.py  test_backtest.py  test_benchmark.py  test_ci_config.py  test_cli.py  test_config.py  test_config_examples.py  test_data_adapters.py  test_data_quality.py  test_execution_backtest.py  test_factor_diagnostics.py  test_factors.py  test_labels.py  test_maintenance_docs.py  test_manifest.py  test_manifest_schema.py  test_metrics.py  test_ml_model.py  test_ml_walk_forward.py  test_panel.py  test_project_governance.py  test_readme_commands.py  test_reviewer.py  test_robustness.py  test_sample_csv_pipeline.py  test_streamlit_app.py  test_synthetic.py  test_version_consistency.py  test_weighting.py  test_workflow.py
(+25 files in other folders)
